# mi-web-technologien-beiboot-ss2024-Amueller36

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  feedback-cn  review-prozess.md  time.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs  models.rs  utils.rs
backend/src/controller/: mod.rs  projects.rs
backend/src/core/: long_exposure_image_logic.rs  mod.rs
backend/src/routes/: create_long_exposure_image.rs  mod.rs  projects.rs  sendFrames.rs  upload.rs
backend/src/services/: long_exposure_image_service.rs  mod.rs  projects_service.rs
doc/adr/: 0001-language-rust.md  0001-record-architecture-decisions.md  0002-backend-framework.md  0003-custom-long-light-exposure-image-processing.md  0004-frontend-framework.md  0004-movie-and-image-files-storage.md
frontend/: .dockerignore  .env  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  types.ts
frontend/src/components/: DeleteIcon.vue  ProjectEditor.vue  ProjectPicker.vue  TimelineComponent.vue  VideoPlayer.vue  VideoUploadComponent.vue
frontend/src/router/: index.ts
frontend/src/views/: ProjectEditor.vue  ProjectPicker.vue
src/: main.rs
src/core/: image_magic.rs  mod.rs
src/routes/: upload.rs
