[package]
name = "rust-beiboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-multipart = "0.6.1"
futures-util= "0.3.30"
mime = "0.3.16"
tracing = "0.1.40"
tokio = { version = "1.16.1", features = ["fs"] }
uuid = { version = "1.8.0", features = ["v4"] }
image = "0.25.1"
serde = { version = "1.0.199", features = ["derive"] }